--- a/Part1_Introduction_basic/index.html
+++ b/Part1_Introduction_basic/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
+    <!-- Comment -> Ctrl + / -->
+    <!-- Phần đầu -->
     <head>
         <meta charset="utf-8">
         <title> Tiêu đề </title>    <!--Tiêu đề web-->
     </head>
+    <!-- Phần thân -->
     <body>
         Nội dung ở đây
     </body>
