Cac the html thong dung

--- a/Part1_Introduction_basic/index.html
+++ b/Part1_Introduction_basic/index.html
@@ -8,6 +8,66 @@
     </head>
     <!-- Phần thân -->
     <body>
-        Nội dung ở đây
+        <!-- Nội dung ở đây -->
+            <!-- Heading -->
+                <h1>Heading 1</h1>
+                <h2>Heading 2</h2>
+                <h3>Heading 3</h3>
+                <h4>Heading 4</h4>
+                <h5>Heading 5</h5>
+                <h6>Heading 6</h6>
+            <!-- paragraph -->
+                <p>Đây là đoạn văn</p>
+            <!-- img -->
+                <img src="https://congthuong-cdn.mastercms.vn/stores/news_dataimages/2022/102022/29/12/in_article/7423d05f-e2f4-4c26-9f6c-1d625c2953d320221029125851.jpg?rt=20221029125854" alt="Vợ tui">
+            <!-- a -->
+                <a href=""></a>   
+            <!-- ul - li -->
+                <ul>
+                    <li>Phần đầu</li>
+                    <li>phần 2</li>
+                    <li>3</li>
+                    <li>4</li>
+                    <li>5</li>
+                </ul>
+            <!-- table -->
+                <table>
+                    <thead>
+                        <!-- thead -->
+                        <th>STT</th>
+                        <th>Tên</th>
+                        <th>Địa chỉ</th>
+                    </thead>
+                    <tbody>
+                        <!-- tr table row -->
+                        <!-- mỗi table row tr là 1 dòng -->
+                        <tr>
+                            <!-- td tuong ứng 3 thẻ th -->
+                          <td>1</td>
+                          <td>Thanh Tịnh</td>
+                          <td>Thành Phố Hồ Chí Minh</td>  
+                        </tr>
+                        <tr>
+                          <td>2</td>
+                          <td>Kim Sejoeng</td>
+                          <td>Korean</td>
+                        </tr>
+                    </tbody>
+                </table>
+            <!-- input -->
+                <input type="text">
+                <!-- cb -> nhiều cái -->
+                <input type="checkbox">
+                <!-- rdio -> chỉ 1 -->
+                <!-- Cách để chọn 1 cái là đặt 3 cái cùng tên -->
+                <input type="radio" name="Gender" id="">
+                <input type="radio" name="Gender" id="">
+                <input type="radio" name="Gender" id="">
+            <!-- button -->
+                <button>Bấm vào đây, đây không phải nút</button>
+            <!-- div -->
+                <div>
+                    Tạo khối xung quanh
+                </div>
     </body>
 </html>
