--- a/Part1_Introduction_basic/example/viduthe.html
+++ b/Part1_Introduction_basic/example/viduthe.html
@@ -23,6 +23,8 @@
         online, từ đó phát triển game phong phú hơn và mang theo một cốt truyện. Mong muốn của mình là đưa người chơi
         trở về ký ức tuổi thơ nhưng chỉ cần ngồi trước máy tính có thể điều khiển cỗ máy ở xa, gắp trúng sẽ được gửi quà
         về tận nhà".</p>
+
+        <p>Trang web <a href="https://fullstack.edu.vn">fullstack.edu.vn</a> thuộc sở hữu bởi F8 - Nền tảng học lập trình web tiên phong tại Việt Nam.</p>
 </body>
 
 </html>
