--- a/Part1_Introduction_basic/index.html
+++ b/Part1_Introduction_basic/index.html
@@ -72,6 +72,10 @@
     <div>
         Tạo khối xung quanh
     </div>
+
+
+    <!-- attrible : thuộc tính -->
+    <p title="Thiệt đó">Tôi yêu Kim Sejoeng nhất trên đời</p>
 </body>
 
 </html>
