--- a/Part1_Introduction_basic/index.html
+++ b/Part1_Introduction_basic/index.html
@@ -29,10 +29,17 @@
     <ul>
         <li>Phần đầu</li>
         <li>phần 2</li>
-        <li>3</li>
-        <li>4</li>
-        <li>5</li>
+        <li>phần 3</li>
+        <li>phần 4</li>
+        <li>phần 5</li>
     </ul>
+    <ol>
+        <li>hi</li>
+        <li>hí</li>
+        <li>hì</li>
+        <li>hị</li>
+        <li>hỉ</li>
+    </ol>
     <!-- table -->
     <table>
         <thead>
