--- a/Part2_Introdution_CSS/index.html
+++ b/Part2_Introdution_CSS/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <head>
     <meta charset="UTF-8">
     <title> Tiêu đề </title>
@@ -7,14 +8,16 @@
     </style> -->
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div>
         <h1>CSS in HTML</h1>
         <ol>
-            <li>internal</li>
+            <li>Internal</li>
             <li>External</li>
             <li>Inline</li>
         </ol>
     </div>
 </body>
+
 </html>
