--- a/Part2_Introdution_CSS/index.html
+++ b/Part2_Introdution_CSS/index.html
@@ -18,6 +18,16 @@
             <li>Inline</li>
         </ol>
     </div>
+    <div>
+        <!-- Class -> . -->
+        <!-- Id -> # -->
+        <h1 id="first-heading">CSS selector</h1>
+        <h1 id="second-heading">CSS selector</h1>
+        <h1 id="third-heading">CSS selector</h1>
+        <h2 class="second-heading">ID & CLASS</h2>
+        <h2 class="second-heading">ID & CLASS</h2>
+        <h2 class="second-heading">ID & CLASS</h2>
+    </div>
 </body>
 
 </html>
