--- a/Part2_Introdution_CSS/index.html
+++ b/Part2_Introdution_CSS/index.html
@@ -28,6 +28,14 @@
         <h2 class="second-heading">ID & CLASS</h2>
         <h2 class="second-heading">ID & CLASS</h2>
     </div>
+    <div>
+        Css selector cơ bản
+        <a href="https://youtu.be/hzn_VKpGdTg">Link xem</a>
+        <div>
+        <h2 style="color:red; font-size: 15;">img</h2>
+            <img src="ViDu.jpg" alt="">
+        </div>
+    </div>
 </body>
 
 </html>
