--- a/Part2_Introdution_CSS/index.html
+++ b/Part2_Introdution_CSS/index.html
@@ -36,6 +36,10 @@
             <img src="ViDu.jpg" alt="">
         </div>
     </div>
+    <div>
+        <h1 id="heading-id">Biến trong CSS</h1>
+        
+    </div>
 </body>
 
 </html>
