--- a/Part2_Introdution_CSS/index.html
+++ b/Part2_Introdution_CSS/index.html
@@ -40,6 +40,20 @@
         <h1 id="heading-id">Biến trong CSS</h1>
         
     </div>
+    <div class="box"></div>
+    <div class="header">
+        <!-- Thuộc tính background-image:
+        -linear-gradient: tạo màu cho background với dãy màu chuyển
+        -no-repeat: không lặp lại
+        -repeat-y: lặp lại theo chiều ngang
+        -repeat-x: lặp lại theo chiều dọc
+        -hướng xoay(góc xoay): khi giá trị là của nó là 0 thì chỉ cần viết là 0 còn khi mà có giá trị
+        lớn hơn 0 thì phải viết hẳn giá trị độ vào
+        -tham số thứ 1(bên dưới hay màu 1)
+        -tham số thứ 2(bên trên hay màu 2)
+        -rgba(red:.....;green:..... ;blue:.....;alpha(độ trong suốt):.....;) -->
+
+    </div>
 </body>
 
 </html>
