--- a/Part2_Introdution_CSS/CssDonVi/index.html
+++ b/Part2_Introdution_CSS/CssDonVi/index.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Tiêu đề</title>
 </head>
 <body>
     <h1>CSS units</h1>
+    <div>
+        <h2>Absolute units</h2>
+        <ol style="font-size: large;">
+            <li>px</li>
+            <li>pt</li>
+            <li>cm</li>
+            <li>mm</li>
+            <li>inch</li>
+            <li>pc</li>
+        </ol>
+    </div>
+    <div>
+        <h2>Relative units</h2>
+        <ol style="font-size: large;">
+            <li>%</li>
+            <li>rem</li>
+            <li>em</li>
+            <li>vw</li>
+            <li>vh</li>
+            <li>vmin</li>
+            <li>vmax</li>
+            <li>ex</li>
+            <li>ch</li>
+        </ol>
+    </div>
 </body>
 </html>
