--- a/Part2_Introdution_CSS/CssDonVi/index.html
+++ b/Part2_Introdution_CSS/CssDonVi/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>CSS units</h1>
+    <div class="box"></div>
     <div>
         <h2>Absolute units</h2>
         <ol style="font-size: large;">
