--- a/Part2_Introdution_CSS/CssDonVi/index.html
+++ b/Part2_Introdution_CSS/CssDonVi/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Tiêu đề</title>
 </head>
+
 <body>
     <h1>CSS units</h1>
-    <div class="box"></div>
+    <div class="box-absolute"></div>
+    <div class="box-relative"></div>
+    <div class="text-rem"> hihi </div>
+    <div class="text-em" style="font-size: 15px;">
+        <p style="font-size: 2em;">test em</p>
+    </div>
+    <div class="box-vw-vh">haha</div>
+    
     <div>
         <h2>Absolute units</h2>
         <ol style="font-size: large;">
@@ -35,4 +44,5 @@
         </ol>
     </div>
 </body>
+
 </html>
