--- a/Part4_Background/Background-size/index.html
+++ b/Part4_Background/Background-size/index.html
@@ -13,7 +13,7 @@
 
             
             background-size: contain;
-            background-size: cover;
+            /* background-size: cover; */
         }
     </style>
 </head>
