--- a/Part4_Background/Background-origin/index.html
+++ b/Part4_Background/Background-origin/index.html
@@ -11,6 +11,10 @@
             background-image: url(https://congthuong-cdn.mastercms.vn/stores/news_dataimages/2022/102022/29/12/in_article/7423d05f-e2f4-4c26-9f6c-1d625c2953d320221029125851.jpg?rt=20221029125854);
             background-repeat: no-repeat;
             background-size: contain;
+            border: 20px dashed blueviolet;
+            padding: 20px;
+            box-sizing: border-box;
+            background-origin: padding-box;
         }
     </style>
 </head>
