--- a/Part5_Postition-relative/index.html
+++ b/Part5_Postition-relative/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="header"></div>
+
     <div class="box">
         <div class="box2">
             <div class="box-child"></div>
