--- a/Part7_FlexboxCss/index.html
+++ b/Part7_FlexboxCss/index.html
@@ -4,22 +4,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        html, body {
+            padding: 12px;
+            margin: 0;
+            box-sizing: border-box;
+        }
         .header {
             color: darkcyan;
             font-size: 100px;
-            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+            font-family: 'Courier New', Courier, monospace;
         }
         .thuoctinh {
             font-size: 30px;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
     </style>
 </head>
 <body>
-    <h1 class="header">CSS Flexbox</h1>
+    <h1 title="Tieu de" class="header">CSS Flexbox</h1>
     <ol class="thuoctinh">
         <li>display</li>
         <li>flex-direction</li>
-        <li></li>
+        <li><input type="text"></li>
         <li></li>
         <li></li>
         <li></li>
