--- a/Part7_FlexboxCss/index.html
+++ b/Part7_FlexboxCss/index.html
@@ -4,6 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        /*
+            Setting up =)) 
+        */
         html, body {
             padding: 12px;
             margin: 0;
@@ -21,6 +24,7 @@
     </style>
 </head>
 <body>
+    
     <h1 title="Tieu de" class="header">CSS Flexbox</h1>
     <ol class="thuoctinh">
         <li>display</li>
