--- a/Part7_FlexboxCss/index.html
+++ b/Part7_FlexboxCss/index.html
@@ -29,16 +29,16 @@
     <ol class="thuoctinh">
         <li>display</li>
         <li>flex-direction</li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>flex-wrap</li>
+        <li>flex-basis</li>
+        <li>justify-content</li>
+        <li>justify-self</li>
+        <li>align-content</li>
+        <li>align-self</li>
+        <li>flex-grow</li>
+        <li>flex-shrink</li>
+        <li>flex</li>
+        <li>order</li>
     </ol>
 </body>
 </html>
