--- a/Part7_FlexboxCss/index.html
+++ b/Part7_FlexboxCss/index.html
@@ -1,44 +1,44 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        /*
+      /*
             Setting up =)) 
         */
-        html, body {
-            padding: 12px;
-            margin: 0;
-            box-sizing: border-box;
-        }
-        .header {
-            color: darkcyan;
-            font-size: 100px;
-            font-family: 'Courier New', Courier, monospace;
-        }
-        .thuoctinh {
-            font-size: 30px;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
+      html,
+      body {
+        padding: 12px;
+        margin: 0;
+        box-sizing: border-box;
+      }
+      .header {
+        color: darkcyan;
+        font-size: 100px;
+        font-family: "Courier New", Courier, monospace;
+      }
+      .thuoctinh {
+        font-size: 30px;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      }
     </style>
-</head>
-<body>
-    
+  </head>
+  <body>
     <h1 title="Tieu de" class="header">CSS Flexbox</h1>
     <ol class="thuoctinh">
-        <li>display</li>
-        <li>flex-direction</li>
-        <li>flex-wrap</li>
-        <li>flex-basis</li>
-        <li>justify-content</li>
-        <li>justify-self</li>
-        <li>align-content</li>
-        <li>align-self</li>
-        <li>flex-grow</li>
-        <li>flex-shrink</li>
-        <li>flex</li>
-        <li>order</li>
+      <li>display</li>
+      <li>flex-direction</li>
+      <li>flex-wrap</li>
+      <li>flex-basis</li>
+      <li>justify-content</li>
+      <li>justify-self</li>
+      <li>align-content</li>
+      <li>align-self</li>
+      <li>flex-grow</li>
+      <li>flex-shrink</li>
+      <li>flex</li>
+      <li>order</li>
     </ol>
-</body>
+  </body>
 </html>
