--- a/Part7_FlexboxCss/index.html
+++ b/Part7_FlexboxCss/index.html
@@ -25,7 +25,7 @@
     </style>
   </head>
   <body>
-    <img src="./assets/mywife.jpg" alt="" />
+    <img src="/assets/img/flex_terms.png" alt="" />
     <h1 title="Tieu de" class="header">CSS Flexbox</h1>
     <ol class="thuoctinh">
       <li>display</li>
